Polishing template for the app

--- a/template/ban.html
+++ b/template/ban.html
@@ -6,6 +6,10 @@
     <title>Document</title>
     <link rel="stylesheet" href="./styles/nav_bar_styles.css">
     <link rel="stylesheet" href="./styles/tool_bar_styles.css">
+    <link rel="stylesheet" href="./styles/champion_list_styles.css">
+    <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.4.0/axios.min.js"></script>  
+    
     <style>
         
     </style>
@@ -36,5 +40,11 @@
             <div class="search_tab toolbar_tab"><input type="text" placeholder="Search.."></div>
         </div>
     </div>
+
+    <div class="champion_list"></div>
+    <div class="selected">
+    </div>
+
+    <script src="./scripts/champion_list_script.js"></script>
 </body>
 </html>
