Possible to select character to pick + app faster

--- a/template/loading.html
+++ b/template/loading.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-
     <style>
         html{
             width: 100%;
@@ -16,7 +15,10 @@
             overflow: hidden;
         }
     </style>
+    <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.4.0/axios.min.js"></script>
 </head>
 <body>
+    <script src="./scripts/API_calls_script.js"></script>
 </body>
 </html>
