--- a/template/pick.html
+++ b/template/pick.html
@@ -42,9 +42,8 @@
     </div>
 
     <div class="champion_list"></div>
-    <div class="selected">
-    </div>
+    <div class="selected_champion_list"></div>
 
-    <script src="./scripts/champion_list_script.js"></script>
+    <script src="./scripts/pick_script.js"></script>
 </body>
 </html>
