--- a/template/styles/nav_bar_styles.css
+++ b/template/styles/nav_bar_styles.css
@@ -2,6 +2,10 @@ body {
     font-family: "Lato", sans-serif;
   }
 
+::-webkit-scrollbar {
+    display: none;
+}
+
 .navigation_bar{
     width: 15%;
     height: 100%;
