--- a/template/accept.html
+++ b/template/accept.html
@@ -21,9 +21,17 @@
             <label class="switch accept">
                 <input type="checkbox">
                 <span class="slider round"></span>
-              </label>
+            </label>
             <div class="pick_tab nav_tab">Pick</div>
+            <label class="switch pick">
+                <input type="checkbox">
+                <span class="slider round"></span>
+            </label>
             <div class="ban_tab nav_tab">Ban</div>
+            <label class="switch ban">
+                <input type="checkbox">
+                <span class="slider round"></span>
+            </label>
         </div>
         <div class="end_nav_tab_list">
             <div class="notification_tab nav_tab">Notification</div>
