auto ban feature finished

--- a/template/ban.html
+++ b/template/ban.html
@@ -43,10 +43,20 @@
         </div>
     </div>
 
-    <div class="champion_list"></div>
-    <div class="selected">
+    <div class="toolbar">
+        <div class="left_toolbar_tab_list">
+            <div class="back_tab toolbar_tab">Back</div>
+            <div class="forward_tab toolbar_tab">Forward</div>
+            <div class="refresh_tab toolbar_tab">Refresh</div>
+        </div>
+        <div class="right_toolbar_tab_list">
+            <div class="search_tab toolbar_tab"><input type="text" placeholder="Search.."></div>
+        </div>
     </div>
 
-    <script src="./scripts/champion_list_script.js"></script>
+    <div class="champion_list"></div>
+    <div class="selected_champion_list"></div>
+
+    <script src="./scripts/ban_script.js"></script>
 </body>
 </html>
