--- a/template/pick.html
+++ b/template/pick.html
@@ -23,17 +23,17 @@
         <div class="mid_nav_tab_list">
             <div class="accept_tab nav_tab">Accept</div>
             <label class="switch accept">
-                <input type="checkbox">
+                <input type="checkbox" class="accept_checkbox">
                 <span class="slider round"></span>
             </label>
             <div class="pick_tab nav_tab">Pick</div>
             <label class="switch pick">
-                <input type="checkbox">
+                <input type="checkbox" class="pick_checkbox">
                 <span class="slider round"></span>
             </label>
             <div class="ban_tab nav_tab">Ban</div>
             <label class="switch ban">
-                <input type="checkbox">
+                <input type="checkbox" class="ban_checkbox">
                 <span class="slider round"></span>
             </label>
         </div>
