--- a/template/styles/champion_list_styles.css
+++ b/template/styles/champion_list_styles.css
@@ -1,13 +1,16 @@
 .champion_list {
     display:flex;
     position: absolute;
+    width: auto;
+    height: auto;
     top: max(10%, 50px);
     left: max(110px, 16%);
     right: max(9%, 130px);
     flex-direction: row;
     flex-wrap: wrap;
     overflow-y: scroll;
-    height: 90%;
+    white-space:nowrap;
+    max-height: 90%;
 }
 
 .champion {
@@ -19,6 +22,7 @@
     margin: 10px;
     flex-direction: column;
     flex-wrap: wrap;
+    max-height: 151px;
 }
 
 .champion img {
