--- a/template/index.html
+++ b/template/index.html
@@ -36,17 +36,20 @@
             </label>
         </div>
         <div class="end_nav_tab_list">
-            <div class="notification_tab nav_tab">Notification</div>
-            <div class="settings_tab nav_tab">Settings</div>
+            <div class="notification_tab nav_tab">Notification (wip)</div>
+            <div class="settings_tab nav_tab">Settings (wip)</div>
         </div>
     </div>
 
     <!-- Tool Bar -->
     <div class="toolbar">
         <div class="left_toolbar_tab_list">
-            <div class="back_tab toolbar_tab">Back</div>
-            <div class="forward_tab toolbar_tab">Forward</div>
-            <div class="refresh_tab toolbar_tab">Refresh</div>
+            <div class="back_tab toolbar_tab">TOP</div>
+            <div class="forward_tab toolbar_tab">JGL</div>
+            <div class="refresh_tab toolbar_tab">MID</div>
+            <div class="refresh_tab toolbar_tab">BOT</div>
+            <div class="refresh_tab toolbar_tab">SUP</div>
+
         </div>
         <div class="right_toolbar_tab_list">
             <div class="search_tab toolbar_tab"><input class="search_tab_ET" type="text" placeholder="Search.."></div>
