reworked the loading page

--- a/template/index.html
+++ b/template/index.html
@@ -36,8 +36,8 @@
             </label>
         </div>
         <div class="end_nav_tab_list">
-            <div class="notification_tab nav_tab">Notification (wip)</div>
-            <div class="settings_tab nav_tab">Settings (wip)</div>
+            <div class="notification_tab nav_tab">Notification</div>
+            <div class="settings_tab nav_tab">Settings</div>
         </div>
     </div>
 
