last patch is applied, count intended champ fr ban

--- a/template/loading.html
+++ b/template/loading.html
@@ -56,7 +56,7 @@
 </head>
 <body>
     <div class="loader"></div>
-    <div id="main"><div class="fof"><h1>Please make sure LoL Client is launched</h1></div></div>
+    <div id="main"><div class="fof"><h1>Please make sure LoL Client is launched when starting the app</h1></div></div>
     <script src="./scripts/API_calls_script.js"></script>
     <script>$('.loader').css('height', $('.loader').width());</script>
 </body>
